pkg/kgateway/translator/gateway/testutils/outputs/traffic-policy/request-mirror-listener.yaml
Clusters:
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_mirror-one_80
  type: EDS
- commonLbConfig:
    localityWeightedLbConfig: {}
  connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  name: kube_default_primary_80
  type: EDS
- connectTimeout: 5s
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 443
  filterChains:
  - filterChainMatch:
      serverNames:
      - example.com
    filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: https
        statPrefix: http
        useRemoteAddress: true
    name: https
    transportSocket:
      name: envoy.transport_sockets.tls
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        commonTlsContext:
          alpnProtocols:
          - h2
          - http/1.1
          tlsCertificates:
          - certificateChain:
              inlineBytes: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVQVENDQWlXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFiTVFvd0NBWURWUVFEREFFcU1RMHcKQ3dZRFZRUUtEQVJ5YjI5ME1CNFhEVEl6TVRFd09ERTJORFExTjFvWERUTXpNVEV3TlRFMk5EUTFOMW93SGpFSwpNQWdHQTFVRUF3d0JLakVRTUE0R0ExVUVDZ3dIWjJGMFpYZGhlVENDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFECmdnRVBBRENDQVFvQ2dnRUJBTit0V2hoa3QvNVFQTUw4UGorZ1JScUM1blp5TG9Sem5iK3hPazdQTVozRndtYUcKNThvbVhPRm16ZmJlK0VaaGE0UlBhK1BpdFhFbitjZkM5allYRU42dGM1WExWUjlKK1dCRXRhSUpoZlh2VzAvbgpra [...]
            privateKey:
              inlineBytes: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV1d0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktVd2dnU2hBZ0VBQW9JQkFRRGZyVm9ZWkxmK1VEekMKL0Q0L29FVWFndVoyY2k2RWM1Mi9zVHBPenpHZHhjSm1odWZLSmx6aFpzMzIzdmhHWVd1RVQydmo0clZ4Si9uSAp3dlkyRnhEZXJYT1Z5MVVmU2ZsZ1JMV2lDWVgxNzF0UDU1SVIrTldtSkhBUUV0aXg3a3NzV0lNRXd5eHR1ZlMxCkxrUkRyaFNGNW1CU0lYbm51czFzRU5jdUVmZVZ1SVUyclB5RlRxVzVKcHZ0dHhWQWsreE8vKzk3UTE4QWxvc3gKdTBidG9HYjR2NXZoVUZBUVgyamk1Yk0wLzA3S2VkTUczbkI2bktFNW16R0FZbC9lUXoxekpJSUlmZDA3NTZWYQpDb [...]
          tlsParams: {}
  listenerFilters:
  - name: envoy.filters.listener.tls_inspector
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        requestMirror:
        - gateway.kgateway.dev/TrafficPolicy/default/gateway-mirror
  name: listener~443
Routes:
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.TrafficPolicy.gateway.kgateway.dev:
        requestMirror:
        - gateway.kgateway.dev/TrafficPolicy/default/listener-mirror
  name: https
  virtualHosts:
  - domains:
    - example.com
    name: https~example_com
    requireTls: ALL
    routes:
    - match:
        pathSeparatedPrefix: /listener-inherit
      name: https~example_com-route-0-httproute-mirror-route-default-1-0-rule1-matcher-0
      route:
        cluster: kube_default_primary_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        requestMirrorPolicies:
        - cluster: kube_default_mirror-one_80
    - match:
        pathSeparatedPrefix: /route-override
      metadata:
        filterMetadata:
          merge.TrafficPolicy.gateway.kgateway.dev:
            requestMirror:
            - gateway.kgateway.dev/TrafficPolicy/default/route-mirror
      name: https~example_com-route-1-httproute-mirror-route-default-0-0-rule0-matcher-0
      route:
        cluster: kube_default_primary_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        requestMirrorPolicies:
        - cluster: kube_default_mirror-one_80
          disableShadowHostSuffixAppend: true
  - domains:
    - '*'
    name: https~misdirected-request
    routes:
    - directResponse:
        status: 421
      match:
        prefix: /
Statuses:
  gateways:
    default/example-gateway:
      conditions:
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Successfully resolved all Gateway references
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: https
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/mirror-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Route
          reason: Programmed
          status: "True"
          type: kgateway.dev/Programmed
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  policies:
    TrafficPolicy/default/gateway-mirror:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Overridden due to conflict with higher priority policy in target(s)
          reason: Overridden
          status: "False"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/listener-mirror:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
    TrafficPolicy/default/route-mirror:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
